# lmlab

./: README.md  minimal.py  pyproject.toml
lmlab/: __init__.py  model_costs.json  parse_anything.py  prompt_llm.py  rag.py
tests/: test_libs.py
